[package]
name = "wallex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
dotenv = "0.15.0"
http = "0.2.8"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.2.0"
thiserror = "1.0.38"
